--- a/package.json
+++ b/package.json
@@ -8,8 +8,19 @@
     "start": "next start"
   },
   "dependencies": {
+    "autoprefixer": "^10.2.4",
     "next": "10.0.6",
+    "postcss": "^8.2.6",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "tailwindcss": "^2.0.3"
+  },
+  "devDependencies": {
+    "eslint": "^7.20.0",
+    "eslint-config-prettier": "^7.2.0",
+    "eslint-plugin-prettier": "^3.3.1",
+    "eslint-plugin-react": "^7.22.0",
+    "prettier": "2.2.1",
+    "prettier-plugin-tailwind-css": "^1.5.0"
   }
 }
